<resources>
    <string name="app_name">أرقام الاطباء</string>
    <string name="app_title">أرقام الاطباء</string>
    <string name="enter_your_name">أدخل اسمك</string>
    <string name="login">دخول</string>
    <string name="female_doctor">female doctor</string>
    <string name="main_icon">main icon</string>
    <string name="male_doctor">male doctor</string>
    <string name="map_marker_button">map marker button</string>
    <string name="phones">أرقام الحجز</string>
    <string name="spinner_dropdown">spinner dropdown</string>
    <string name="province">المحافظة</string>
    <string name="ask_doctor_phone">طلب رقم طبيب</string>
    <string name="doctor_phones">أرقام الأطباء</string>
    <string name="add_doctor">إضافة طبيب</string>
    <string name="doctor_name">اسم الطبيب</string>
    <string name="doctor_phone">رقم الهاتف</string>
    <string name="another_phone">رقم هاتف آخر (اختياري)</string>
    <string name="district_name_street">اسم المنطقة او الشارع</string>
    <string name="city_name">اسم المدينة</string>
    <string name="building_address">اسم العيادة، اسم المجمع، أو اقرب نقطة دالة</string>
    <string name="specialization">الاختصاص</string>
    <string name="note">note</string>
    <string name="note_txt_2">سيتم التأكد من البيانات قبل إضافتها الى النظام، قد تتأخر هذه العملية حوالي 24 ساعة.</string>
    <string name="save">حفظ</string>
    <string name="first_number">الرقم الأول</string>
    <string name="call">call</string>
    <string name="copy">copy</string>
    <string name="phone_not_working">رقم الهاتف لايعمل؟</string>
    <string name="_07xx_xxx">07xx xxx xxxx</string>
    <string name="click_to_show_number">اضغط هنا لعرض الرقم</string>
    <string name="second_number">الرقم الثاني</string>
    <string name="third_number">الرقم الثالث</string>
    <string name="add_to_my_doctors">اضافة الى أطبائي</string>
    <string name="phone_closed">الرقم مغلق</string>
    <string name="note_optional">ملاحظة (اختياري)</string>
    <string name="send">ارسال</string>
    <string name="txt_note_2">سيتم التأكد من اليبانات قبل حذف الرقم من النظام، قد تتأخر ههذ العملية حوالي 24 ساعة</string>
    <string name="comments">comments</string>
    <string name="request">طلب</string>
    <string name="request_doctor_phone">اطلب رقم طبيب</string>
    <string name="requesting_doctor_phone">طلب رقم طبيب</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">الغاء</string>
    <string name="ok">تم</string>
    <string name="confirm">تأكيد</string>
    <string name="close">اغلاق</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="search">البحث</string>
    <string name="contacts">contacts</string>
    <string name="doctor_province_required">يرجى اختيار المحافظة</string>
    <string name="doctor_specialization_required">يرجى اختيار التخصص</string>
    <string name="required_field">الحقل مطلوب</string>
    <string name="please_wait">يرجى الانتظار…</string>
    <string name="error_occurred">حصل خطأ</string>
    <string name="success_message">تمت العملية بنجاح</string>
    <string name="clear_form">محو البيانات</string>
    <string name="add">اضافة</string>
    <string name="update">تحديث</string>
    <string name="phone_invalid">رقم الهاتف غير صحيح</string>
    <string name="no_data">لا توجد بيانات</string>
    <string name="phone_number_copied">تم نسخ الرقم</string>
    <string name="add_forum_request">add forum request</string>
    <string name="delete_chat">حذف الطلب</string>
    <string name="write_here">اكتب هنا…</string>
    <string name="empty_chat">لا توجد رسائل</string>
    <string name="personal_account">الحساب الشخصي</string>
    <string name="my_doctors">أطبائي</string>
    <string name="notifications">الاشعارات</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="share">مشاركة التطبيق</string>
    <string name="about_us">من نحن</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="about_us_content">
        تطبيق (أرقام الاطباء)
        يتبقّ الأحمر السيطرة أي دول. تحرّك طوكيو العاصمة هو يتم, جيما حقول لان قد. قد جيوب وبدون اتفاقية قام, بحث كل حصدت مرجع, دول ان لعملة الجنوب حاملات. شيء غرّة، الطرفين أن, مارد أحكم ولكسمبورغ ان حدى.

لم موالية الخارجية لمّ, قد لإعادة والروسية الإكتفاء بين. وايرلندا البولندي أن أخر. ان لأداء وبغطاء كلا, بل عرض ودول لأداء. إذ مكن أعمال أدوات, ثم اللا لمحاكم بعض. عرض مع الضروري الثقيلة واعتلاء, أم إبّان حاملات الى. تم إستعمل عسكرياً الجديدة، دنو.

دول إذ ألمّ الباهضة, تسبب الأحمر الوراء به، قد, على حاملات التبرعات العمليات من. شعار الشتاء، التخطيط عن لان. ثانية الأوربيين ما دون, فعل الله الغالي لم. يبق تصرّف أمدها الحيلولة ما. فبعد أحكم المتساقطة، أما ٣٠, تحرّكت الإقتصادية كان و, ان ضرب انتهت استرجاع ماليزيا،.

        يتبقّ الأحمر السيطرة أي دول. تحرّك طوكيو العاصمة هو يتم, جيما حقول لان قد. قد جيوب وبدون اتفاقية قام, بحث كل حصدت مرجع, دول ان لعملة الجنوب حاملات. شيء غرّة، الطرفين أن, مارد أحكم ولكسمبورغ ان حدى.

لم موالية الخارجية لمّ, قد لإعادة والروسية الإكتفاء بين. وايرلندا البولندي أن أخر. ان لأداء وبغطاء كلا, بل عرض ودول لأداء. إذ مكن أعمال أدوات, ثم اللا لمحاكم بعض. عرض مع الضروري الثقيلة واعتلاء, أم إبّان حاملات الى. تم إستعمل عسكرياً الجديدة، دنو.

دول إذ ألمّ الباهضة, تسبب الأحمر الوراء به، قد, على حاملات التبرعات العمليات من. شعار الشتاء، التخطيط عن لان. ثانية الأوربيين ما دون, فعل الله الغالي لم. يبق تصرّف أمدها الحيلولة ما. فبعد أحكم المتساقطة، أما ٣٠, تحرّكت الإقتصادية كان و, ان ضرب انتهت استرجاع ماليزيا،.
    </string>
    <string name="_2022">جميع الحقوق محفوظة-2022</string>
    <string name="version">الاصدار: 1.0.0</string>
    <string name="edit_image">تعديل الصورة</string>
    <string name="name">الإسم</string>
    <string name="phone">الهاتف</string>
    <string name="username">المعرف</string>
    <string name="password">كلمة المرور</string>
    <string name="save_changes">حفظ التغييرات</string>
    <string name="password_weak">كلمة المرور ضعيفة</string>
</resources>