<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_secondary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/md_theme_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/login_lblTitle"
        style="@style/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_imgIcon"
        android:layout_width="150dp"
        android:scaleType="fitEnd"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/main_icon"
        app:layout_constraintEnd_toStartOf="@+id/login_imgMaleDoc"
        app:layout_constraintStart_toEndOf="@+id/login_imgFemaleDoc"
        app:layout_constraintTop_toBottomOf="@+id/login_lblTitle"
        app:srcCompat="@drawable/ic_main_icon" />

    <ImageView
        android:id="@+id/login_imgMaleDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/male_doctor"
        app:layout_constraintBottom_toBottomOf="@+id/login_imgIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/login_imgIcon"
        app:srcCompat="@drawable/ic_male_doc" />

    <ImageView
        android:id="@+id/login_imgFemaleDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/female_doctor"
        app:layout_constraintBottom_toBottomOf="@+id/login_imgIcon"
        app:layout_constraintEnd_toStartOf="@+id/login_imgIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_female_doc" />

    <EditText
        android:id="@+id/login_edtName"
        style="@style/NormalInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_imgIcon" />

    <Button
        android:id="@+id/login_btnLogin"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/login_edtName"
        app:layout_constraintTop_toBottomOf="@+id/login_edtName" />

</androidx.constraintlayout.widget.ConstraintLayout>