<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_secondary"
    tools:context=".ui.AboutUsFragment">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/md_theme_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/aboutUs_toolbar"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="?attr/colorSecondary"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/about_us"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TitleText" />

    <TextView
        android:id="@+id/aboutUs_lblTitle"
        style="@style/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUs_toolbar" />

    <ImageView
        android:id="@+id/aboutUs_imgIcon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/main_icon"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toStartOf="@+id/aboutUs_imgMaleDoc"
        app:layout_constraintStart_toEndOf="@+id/aboutUs_imgFemaleDoc"
        app:layout_constraintTop_toBottomOf="@+id/aboutUs_lblTitle"
        app:srcCompat="@drawable/ic_main_icon" />

    <ImageView
        android:id="@+id/aboutUs_imgMaleDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/male_doctor"
        app:layout_constraintBottom_toBottomOf="@+id/aboutUs_imgIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/aboutUs_imgIcon"
        app:srcCompat="@drawable/ic_male_doc" />

    <ImageView
        android:id="@+id/aboutUs_imgFemaleDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/female_doctor"
        app:layout_constraintBottom_toBottomOf="@+id/aboutUs_imgIcon"
        app:layout_constraintEnd_toStartOf="@+id/aboutUs_imgIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_female_doc" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="@color/md_theme_light_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUs_imgIcon" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_content" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>